# visual_servoing_and_grasping_open_manipulator

./: README.md
manipulator_grasping/: CMakeLists.txt  package.xml
manipulator_grasping/config/: vs_grasping_config.yaml
manipulator_grasping/include/: vs_grasping_node.h
manipulator_grasping/launch/: vs_grasping.launch
manipulator_grasping/src/: vs_grasping_node.cpp  vs_grasping_node_callback.cpp
